force-app/main/default/objects/Field_Score__c/Field_Score__c.object-meta.xml
<CustomObject>
    <description>Field Score records for the Account Ranking automation.</description>
    <label>Field Score</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Field Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>