force-app/main/default/objects/Field_Score__c/fields/Field_Weight__c.field-meta.xml
<CustomField>
    <fullName>Field_Weight__c</fullName>
    <description>The master for the Field Score, if there is no related weight the model will be incomplete</description>
    <label>Field Weight</label>
    <referenceTo>Field_Weight__c</referenceTo>
    <relationshipLabel>Field Scores</relationshipLabel>
    <relationshipName>Field_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>