force-app/main/default/objects/Field_Score__c/fields/Hedge_Fund__c.field-meta.xml
<CustomField>
    <fullName>Hedge_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked then the score will only apply to account whose firm type is a Hedge Fund</description>
    <inlineHelpText>Please determine if the Score will only be for Hedge Funds</inlineHelpText>
    <label>Hedge Fund</label>
    <type>Checkbox</type>
</CustomField>