force-app/main/default/objects/Field_Score__c/fields/Lower_Range__c.field-meta.xml
<CustomField>
    <fullName>Lower_Range__c</fullName>
    <description>Allows for a Range of number to be set on a field score, this field is the lower range. The field value needs to be blank for the range fields to be used and vice versa</description>
    <inlineHelpText>Please set the lower range for the acceptable field values</inlineHelpText>
    <label>Lower Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>