force-app/main/default/objects/Field_Score__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The score for the field score record</description>
    <inlineHelpText>Please set the score for the field score, defaults to 0</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>