force-app/main/default/objects/Field_Score__c/fields/Upper_Range__c.field-meta.xml
<CustomField>
    <fullName>Upper_Range__c</fullName>
    <description>Allows for a Ranger of number to be set on a field score, this field is the upper the ranger. The field value needs to be blank for the range fields to be used and vice versa</description>
    <inlineHelpText>Please set the upper range for the acceptable field values</inlineHelpText>
    <label>Upper Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>