force-app/main/default/objects/Field_Score__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value for a particular Field Score this is used to in the Account Ranking Close to search agisnt Field Score records</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>