force-app/main/default/objects/Field_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Score__c</columns>
    <columns>FieldName__c</columns>
    <columns>Upper_Range__c</columns>
    <columns>Lower_Range__c</columns>
    <columns>Hedge_Fund__c</columns>
    <columns>Field_Weight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>